--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
 </head>
 <body>
   <h3>I am practicing GitHub!!!</h3>
-  <!-- This is a comment!!! -->
+  <!-- 
+  NEW PROJECT
+  ------------
+  Git Init
+  Git Add . [ Add এর পর স্পেস দিয়ে Dot দিতে ভুলিও না ]
+  Git Commit -M " Meaningful Message "
+  Git Branch -M Main 
+  Git Remote Add Origin Https://Github.Com/Example/Example.Git  
+  Git Push Origin Main 
+
+  UPDATE PROJECT
+  --------------
+  Git Add .
+  Git Commit -M " Meaningful Message "
+  Git Push Origin Main
+
+  CHANGE ORIGIN
+  -------------
+  Git Init
+  Git Add . [ Add এর পর স্পেস দিয়ে Dot দিতে ভুলিও না ]
+  Git Commit -M " Meaningful Message "
+  Git Branch -M Main 
+  git remote set-url origin Https://Github.Com/Example/Example.Git  
+  Git Push Origin Main 
+-->
 </body>
 </html>
