git command added

--- a/index.html
+++ b/index.html
@@ -6,31 +6,33 @@
   <title>Practicing GitHub</title>
 </head>
 <body>
-  <h3>I am practicing GitHub!!!</h3>
-  <!-- 
-  NEW PROJECT
-  ------------
-  Git Init
-  Git Add . [ Add এর পর স্পেস দিয়ে Dot দিতে ভুলিও না ]
-  Git Commit -M " Meaningful Message "
-  Git Branch -M Main 
-  Git Remote Add Origin Https://Github.Com/Example/Example.Git  
-  Git Push Origin Main 
 
-  UPDATE PROJECT
-  --------------
-  Git Add .
-  Git Commit -M " Meaningful Message "
-  Git Push Origin Main
+<h3>NEW PROJECT</h3>
+<ol>
+  <li>git init</li>
+  <li>git add . [ add এর পর স্পেস দিয়ে dot দিতে ভুলিও না ]</li>
+  <li>git commit -m " Meaningful Message "</li>
+  <li>git branch -M main</li>
+  <li>git remote add origin https://github.com/example/example.git</li>
+  <li>git push origin main</li>
+</ol>
 
-  CHANGE ORIGIN
-  -------------
-  Git Init
-  Git Add . [ Add এর পর স্পেস দিয়ে Dot দিতে ভুলিও না ]
-  Git Commit -M " Meaningful Message "
-  Git Branch -M Main 
-  git remote set-url origin Https://Github.Com/Example/Example.Git  
-  Git Push Origin Main 
--->
+<h3>UPDATE PROJECT</h3>
+<ol>
+  <li>git add . [ add এর পর স্পেস দিয়ে dot দিতে ভুলিও না ]</li>
+  <li>git commit -m " Meaningful Message "</li>
+  <li>git push origin main</li>
+</ol>
+
+<h3>CHANGE ORIGIN</h3>
+<ol>
+  <li>git init</li>
+  <li>git add . [ add এর পর স্পেস দিয়ে dot দিতে ভুলিও না ]</li>
+  <li>git commit -m " Meaningful Message "</li>
+  <li>git branch -M main</li>
+  <li>git remote set-url origin https://github.com/example/example.git</li>
+  <li>git push origin main</li>
+</ol>
+
 </body>
 </html>
