--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Practicing GitHub</title>
 </head>
 <body>
-
+<img src="https://miro.medium.com/v2/resize:fit:1125/1*biIy42Cn4Bnu0IkpUW1Zew.png" alt="github image" width="200px">
 <h3>NEW PROJECT</h3>
 <ol>
   <li>git init</li>
@@ -32,6 +32,15 @@
   <li>git branch -M main</li>
   <li>git remote set-url origin https://github.com/example/example.git</li>
   <li>git push origin main</li>
+</ol>
+
+<h3>Branching & Merging</h3>
+<ol>
+  <li>git branch - Check Git Branch</li>
+  <li>git branch [branch name] - Create a new branch</li>
+  <li>git checkout [branch name] - Switch to a branch</li>
+  <li>git checkout -b [branch name] - Create a new branch and switch to it</li>
+  <li>git merge [branch name] -	Merge a branch into the active branch</li>
 </ol>
 
 </body>
