git command updated

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <li>git checkout [branch name] - Switch to a branch</li>
   <li>git checkout -b [branch name] - Create a new branch and switch to it</li>
   <li>git merge [branch name] -	Merge a branch into the active branch</li>
+  <li>git branch -d [branch name]	- Delete a branch</li>
 </ol>
 
 </body>
